--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1065,6 +1065,11 @@ Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
 K2Node_MakeStruct.PinOptions=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+Button.Accessibility=True
+Button.Localization=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1183,7 +1188,7 @@ bConvertSceneUnit=False
 /Game/InfiniteMatrix/Materials/MI_Tunnel.MI_Tunnel=1
 /Game/InfiniteMatrix/Blueprints/GM_Tutorial.GM_Tutorial=1
 /Game/InfiniteMatrix/UI/WBP_HUD.WBP_HUD=1
-/Game/InfiniteMatrix/UI/WBP_Restart.WBP_Restart=1
+/Game/InfiniteMatrix/UI/WBP_Restart.WBP_Restart=0
 /Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner.BP_TunnelSpawner=0
 /Game/InfiniteMatrix/UI/WBP_Score.WBP_Score=1
 /Game/InfiniteMatrix/Meshes/SM_Hole_01.SM_Hole_01=1
@@ -1229,10 +1234,10 @@ PropertyWrapper.Variable=True
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
-Object=
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1247,8 +1252,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock=
 TextLayoutWidget=
-Widget=
-Visual=
+Widget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
+Visual="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 ContentWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 PanelWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
@@ -2278,23 +2283,37 @@ Primitive=False
 Special Effects=False
 Uncategorized=False
 User Created=False
+Editor=False
+Lists=False
+Misc=False
+Synth=False
+Advanced=False
 
 [UMGEditor.Designer]
 PreviewWidth=1920
 PreviewHeight=1080
 PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Tunnel.BP_Tunnel
+OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner.BP_TunnelSpawner
+OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/InfiniteMatrix/UI/WBP_Restart.WBP_Restart
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
-MRUItem2=/Game/InfiniteMatrix/Blueprints/NewBlueprint
-MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem0=/Game/InfiniteMatrix/UI/WBP_Restart
+MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
+MRUItem4=/Game/InfiniteMatrix/Blueprints/NewBlueprint
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2334,4 +2353,57 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
